# jeli

./: .audit-dirs  .env.example  .env.hermes.template  .gitignore  .gitleaks.toml  .semgrep-configs  CHANGELOG.md  CLAUDE.md  CURATION-ALGORITHM.md  DEPLOYMENT-PLAN.md  HERMES-DOCKER-SETUP.md  QUICK-START.md  README-INVESTIGATION-FINDINGS.md  README.md  RESEARCH-INDEX.md  SECURITY-AUDIT.md  SECURITY.md  TECHNICAL-SPECIFICATION.md  alembic.ini  docker-compose.hermes.yml  docker-compose.test.yml  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  lint-workflows.yml
.tours/: 1-write-path.tour  2-governance.tour  3-integrity-and-verify.tour
alembic/: env.py
alembic/versions/: 001_initial_jeli_schema.py  002_embedding_jsonb.py  003_key_id.py  004_pgvector_1024.py  005_chain_seq.py  006_state_events.py  007_memory_inbox.py  008_default_privileges.py  009_content_class.py  010_app_role_append_only.py  011_redaction_events.py  012_real_fts.py  013_constitutional_layer.py  014_judicial_precedent.py  015_entity_graph.py  016_precedent_corroboration.py  017_fix_column_grant_gaps.py  018_entity_relation_evidence.py
docs/: ARCHITECTURE.md  THREAT-MODEL.md  background.md  design-directions.md  key-management.md  launchd-deployment.md  lessons-learned.md  ob1-schema-audit.md  quarantine-lab-contract.md  trust-doctrine.md
launchd/: com.legionforge.jeli-daemons.plist.template  com.legionforge.jeli-insights.plist.template  com.legionforge.jeli-maintenance.plist.template
scripts/: bench_search.py  eval_injection_classifier.py  import_markdown.py  install-launchd.sh  jeli-daemon-launcher.sh  run_integration_tests.sh  run_mcp_stdio.sh  setup_db_roles.sql
src/jeli_scoped_mcp/: __init__.py  __main__.py  cli.py  config.py  security.py
src/jeli_scoped_mcp/constitutional/: __init__.py  gate.py  manager.py  rules.py
src/jeli_scoped_mcp/core/: __init__.py  contradiction.py  hash_chain.py  trust_score.py
src/jeli_scoped_mcp/daemons/: conflict_resolver.py  insights.py  maintenance.py  runner.py
src/jeli_scoped_mcp/database/: pool.py
src/jeli_scoped_mcp/embedding/: provider.py
tests/: test_adversarial_eval.py  test_cli.py  test_config.py  test_constitutional.py  test_contradiction.py  test_daemons.py  test_embedding_mlx.py  test_graph.py  test_hash_chain.py  test_inbox_classifier.py  test_inbox_worker.py  test_injection_corpus.py  test_insights_daemon.py  test_judicial.py  test_keyprovider.py  test_mcp_server.py  test_memory_tools.py  test_portability.py  test_reranker.py  test_security.py  test_state_tools.py  test_trust_score.py
tests/fixtures/: injection_classifier_corpus.json
tests/integration/: test_live_postgres.py  test_role_privileges.py
(+20 files in other folders)
