[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeli-scoped-mcp"
version = "0.1.0-alpha"
description = "Security & governance layer for personal memory systems. Cryptographic integrity, contradiction detection, user veto."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "JP Cruz", email = "jp@legionforge.org" }
]
keywords = ["memory", "security", "cryptography", "governance", "AI", "MCP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"

dependencies = [
    # MCP protocol (stdio server)
    "mcp>=1.2.0",

    # Database & async I/O
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",

    # Web framework (optional for dev, required for HTTP transport)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Embeddings
    "openai>=1.3.0",
    "aiohttp>=3.9.0",

    # Logging & observability
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",

    # Utilities
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[project.scripts]
jeli = "jeli_scoped_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
    "testcontainers>=3.7.0",  # For ephemeral test Postgres
]

[project.urls]
Homepage = "https://github.com/LegionForge/jeli"
Documentation = "https://github.com/LegionForge/jeli/blob/main/README.md"
Repository = "https://github.com/LegionForge/jeli.git"
Issues = "https://github.com/LegionForge/jeli/issues"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/jeli_scoped_mcp --cov-report=term-missing --cov-report=html"
